--- a/lvtv-backend2/.env.example
+++ b/lvtv-backend2/.env.example
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:PW8jB4AAfjcIIL3bgelNOWYv0lzgyeusSYvK3Z/f564=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost:8000
+APP_URL=http://lvtv.online
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
