--- a/lvtv-backend2/.env.example
+++ b/lvtv-backend2/.env.example
@@ -20,7 +20,8 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+# DB_HOST=127.0.0.1
+DB_HOST=139.59.109.67
 DB_PORT=3306
 DB_DATABASE=lvtv-backend2
 DB_USERNAME=root
